# erp_fastapi

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_02_01_1621-1b56531db0be_initial.py  2026_02_01_2214-4f1761ea9802_add_user_table.py
app/: main.py
app/core/: config.py  database.py
app/shared/: base_repository.py
app/users/: model.py  repository.py  routers.py  schema.py  service.py
